--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build-ts": "tsc",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
-    "serve": "node dist/src.app.js",
-    "dev": "SET ENV_PATH=.env &&nodemon dist/src/app.js",
+    "serve": "node dist/src/app.js",
+    "dev": "npm run build-ts&&SET ENV_PATH=.env &&npm run serve",
     "test": "SET ENV_PATH=.env.test &&mocha -r ts-node/register tests/**/*.spec.ts -t 6000",
     "watch-ts": "tsc -w"
   },
