--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "serve": "node dist/src/app.js",
     "dev": "npm run build-ts&&SET ENV_PATH=.env &&npm run serve",
     "setup-test": "SET ENV_PATH=.env.test",
-    "test": "npm run setup-test&&mocha -r ts-node/register tests/**/*.spec.ts -t 6000",
-    "test-section": "npm run setup-test&&mocha -r ts-node/register -t 6000",
+    "test": "SET ENV_PATH=.env.test&&mocha -r ts-node/register tests/**/*.spec.ts -t 6000",
+    "test-section": "SET ENV_PATH=.env.test&&mocha -r ts-node/register -t 6000",
     "watch-ts": "tsc -w",
     "watch-node": "SET ENV_PATH=.env &&nodemon dist/src/app.js"
   },
