--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "http-status-codes": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.5",
+    "nexmo": "^2.5.2",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.2.1"
   }
 }
