--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build-ts": "tsc",
     "postinstall": "npm run build-ts",
-    "start": "npm run serve",
+    "start": "ENV_PATH=.env&&npm run serve",
     "serve": "node dist/src/app.js",
-    "dev": "npm run build-ts&&SET ENV_PATH=.env &&npm run serve",
+    "dev": "npm run build-ts&&SET ENV_PATH=.env.development&&npm run serve",
     "setup-test": "SET ENV_PATH=.env.test",
     "test": "SET ENV_PATH=.env.test&&mocha -r ts-node/register tests/**/*.spec.ts -t 6000",
     "test-section": "SET ENV_PATH=.env.test&&mocha -r ts-node/register -t 6000",
