--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-ts": "tsc",
     "postinstall": "npm run build-ts",
-    "start": "ENV_PATH=.env&&npm run serve",
+    "start": "export ENV_PATH=.env&&npm run serve",
     "serve": "node dist/src/app.js",
     "dev": "npm run build-ts&&SET ENV_PATH=.env.development&&npm run serve",
     "setup-test": "SET ENV_PATH=.env.test",
