--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.2.5",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
     "@types/mongodb": "^3.3.11",
